--- a/docs/scss/basics.scss
+++ b/docs/scss/basics.scss
@@ -317,6 +317,7 @@ nav.main-nav .slide-menu {
   transform: translate(100%, 0);
   transition: transform .3s;
   padding-top: 72px;
+  z-index: 1;
 
   .menu-item {
     text-align: center;
